# TallyOverlayClient

./: .gitignore  LICENSE  README.md  assemble_licenses.py  config.json  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  shrink_installer.py  tox.ini
.github/workflows/: python-ci.yml  python-release.yml
licenses-static/: tcl-tk.txt
src/: main.py
src/tallyoverlayclient/: main.py
src/tallyoverlayclient/data/: TallyClient.py  __init__.py
src/tallyoverlayclient/models/: AppDataModel.py  AppStage.py  AppStageVar.py  Config.py  Configuration.py  ConnectionState.py  Property.py  TallyDevice.py  TallyState.py  __init__.py
src/tallyoverlayclient/ui/: ConfigFrame.py  ConfigFrameViewModel.py  ConfigurationFrame.py  OverlayFrame.py  OverlayWindow.py  OverlayWindowViewModel.py  __init__.py
tests/: test_configuration.py  test_create_ui_classes.py  test_dummy.py  test_property.py  test_tallyclient.py
