[project]
name = "TallyOverlayClient"
description = "Device State Overlay on Windows for TallyArbiter"
version = "1.0.0"
readme = "README.md"

[tool.mypy]
warn_return_any = true
strict = true
files = "**/*.py"
disallow_untyped_calls = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["async_tkinter_loop.*"]
follow_untyped_imports = true
implicit_reexport = true

[[tool.mypy.overrides]]
module = ["socketio.*"]
follow_untyped_imports = true

[tool.flake8]
max-line-length = 120
ignore = ["E225", ]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
